--- a/lw8/backup/css/style_2.css
+++ b/lw8/backup/css/style_2.css
@@ -7,7 +7,7 @@ body
     background-image: url("../images/fon.jpg");
     /*background-size: 100%;*/
     background-position-x: center;
-    background-position-y: 51px;
+    background-position-y: 50px;
     background-repeat: no-repeat;
     margin: 0px;
 
@@ -73,7 +73,7 @@ ul
     padding: 0;
     list-style-position: inside;
     margin-top: 17px;
-    margin-left: 20px;
+    margin-left: 21px;
     margin-bottom: 48px;
     list-style-position: outside;
 }
@@ -97,9 +97,12 @@ li
 
 a
 {
-    color: #15a98c;
+    
     font: 19px Georgia, 'Times New Roman', Times, serif;
     position: relative;
+    text-decoration: none;
+    border-bottom: 1px solid;
+    color: #15a98c;
 }
 
 a:hover
@@ -112,6 +115,7 @@ a:hover
     content: "→";
     display: inline;
     position: absolute;
+    margin-left: 4px;
 }
 
 footer
@@ -167,13 +171,13 @@ footer
     filter: brightness(4);
 }
 
-.p_for_menu
+.p_menu
 {
     margin-top: 0;
     padding-top: 0;
 }
 
-.menu_item:hover>.p_for_menu
+.menu_item:hover>.p_menu
 {
     color: #ffffff;
 }
@@ -203,28 +207,29 @@ footer
     margin-left: 330px;
     display: flex;
     align-items: center;
-    padding-bottom: 14px;
+    padding-bottom: 17px;
+    padding-left: 1px;
 
 }
 
-.p_for_quote
+.p_quote
 {
-    font: 29px/42px Georgia, 'Times New Roman', Times, serif;
+    font: 28px/42px Georgia, 'Times New Roman', Times, serif;
     font-style: italic;
     color: #ffffff;
     margin-left: 62px;
     margin-bottom: 7px;
 }
 
-.p_for_autor
+.p_autor
 {
     color: #ffffff;
     font-family: "Open Sans";
-    font-size: 17px;
+    font-size: 15.5px;
     font-weight: 600;
     margin-top: 0px;
     margin-bottom: 0px;
-    margin-left: 62px;
+    margin-left: 66px;
 }
 
 /*информация обо мне*/
@@ -232,6 +237,7 @@ footer
 {
     display: inline-flex;
     margin-top: 0;
+    margin-bottom: 50px;
 }
 
 .like
@@ -239,7 +245,7 @@ footer
     width: 330px;
     margin-right: 60px;
     margin-left: 0;
-    margin-top: 173px;
+    margin-top: 172px;
     border-left: 0;
 }
 
@@ -279,7 +285,8 @@ footer
 
 .h2
 {
-    margin-left: 110px;
+    margin-top: 31px;
+    margin-left: 111px;
 }
 
 .films
@@ -298,7 +305,7 @@ footer
     border-radius: 5px;
 }
 
-.p_for_ffilm
+.p_film
 {
     font-size: 17px;
     line-height: 28px;
@@ -313,13 +320,13 @@ footer
     background-image: url("../images/left.png");
     width: 70px;
     height: 70px;
-    z-index: 1;
     margin-top: 64px;
     margin-right: 40px;
     padding: 0px;
     border: 2px solid rgba(0, 0, 0, 0);
     background-repeat: no-repeat;
     border-radius: 50%;
+    order: 1;
 }
 
 #left:focus
@@ -340,6 +347,7 @@ footer
     border: 2px solid rgba(0, 0, 0, 0);
     background-repeat: no-repeat;
     border-radius: 50%;
+    order: 6;
 }
 
 #right:focus
@@ -348,10 +356,43 @@ footer
     border-color: rgba(100, 100, 100, 1);
 }
 
+.invisible_film
+{
+    display: none;
+}
+
+.visible_film_1
+{
+    order: 2;
+    width: 285px;
+    margin-right: 20px;
+}
+
+.visible_film_2
+{
+    order: 3;
+    width: 285px;
+    margin-right: 20px;
+}
+
+.visible_film_3
+{
+    order: 4;
+    width: 285px;
+    margin-right: 20px;
+}
+
+.visible_film_4
+{
+    order: 5;
+    width: 285px;
+    margin-right: 20px;
+}
+
 .button
 {
-    margin-left: 589px;
-    margin-top: 28px;
+    margin-left: 590px;
+    margin-top: 29px;
     margin-bottom: 50px;
     width: 220px;
     height: 50px;
@@ -368,10 +409,7 @@ footer
     background-color: #098d72;
 } 
 
-.invisible_film
-{
-    display: none;
-}
+
 
 .hidden_film
 {
