--- a/lw8/css/style_2.css
+++ b/lw8/css/style_2.css
@@ -5,7 +5,6 @@ body
     align-items: center;
     margin-top: 0px;
     background-image: url("../images/fon.jpg");
-    /*background-size: 100%;*/
     background-position-x: center;
     background-position-y: 50px;
     background-repeat: no-repeat;
@@ -174,6 +173,7 @@ footer
 
 .p_menu
 {
+    font-weight: 500;
     margin-top: 0;
     padding-top: 0;
 }
